--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -69,7 +69,7 @@ body {
 
 @media (min-width: 758px) {
     .home-header {
-        background-image: url('/img/sala2.jpg');
+        background-image: url('img/kobieta-siedzi-przy-stole-w-kawiarni.jpg');
         background-repeat: no-repeat;
         background-size: cover;
         background-position-y: center;
