--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,7 +6,7 @@
         <img src="/img/javastart-logo.png" class="javastart-logo" alt="Logo JavaStart"/>
     </a>
 
-    <div class="navbar-toggler navbar-light" data-toggle="collapse"
+    <div sec:authorize="${!isAuthenticated()}" class="navbar-toggler navbar-light" data-toggle="collapse"
          aria-controls="basicExampleNav" aria-expanded="false"
          th:if="${nextTrainingId != null}">
         <a th:href="|/szkolenie/${nextTrainingUrl}/${nextTrainingId}|">
@@ -56,7 +56,7 @@
         </ul>
         <!-- Links -->
 
-        <a th:href="|/szkolenie/${nextTrainingUrl}/${nextTrainingId}|" th:if="${nextTrainingId != null}"
+        <a sec:authorize="${!isAuthenticated()}" th:href="|/szkolenie/${nextTrainingUrl}/${nextTrainingId}|" th:if="${nextTrainingId != null}"
            class="d-none d-md-block">
             <button class="btn btn-primary">
                 Zapisz się
