Dodanie podstrony /kontakt z formularzem kontaktowym

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -11,7 +11,8 @@
                     <strong>JavaStart</strong>
                 </h6>
                 <hr class="deep-orange accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                <p>Od lat naszą misją jest nauka programowania od zupełnych podstaw. Z naszych bootcampów skorzystały już
+                <p>Od lat naszą misją jest nauka programowania od zupełnych podstaw. Z naszych bootcampów skorzystały
+                    już
                     setki osób, a z kursów internetowych tysiące. Dołącz do grona zadowolonych klientów.</p>
             </div>
             <!--/.First column-->
@@ -51,16 +52,13 @@
 
             <!--Fourth column-->
             <div class="col-md-4 col-lg-3 col-xl-3">
-                <h6 class="text-uppercase font-weight-bold">
-                    <strong>Kontakt</strong>
-                </h6>
-                <hr class="deep-orange accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
-                <p>
-                    <i class="fa fa-home mr-3"></i> Wrocław</p>
-                <p>
-                    <i class="fa fa-envelope mr-3"></i> bootcamp@javastart.pl</p>
-                <p>
-                    <i class="fa fa-phone mr-3"></i> 788 023 248 (pon-pt 8:00-16:00)</p>
+                    <h6 class="text-uppercase font-weight-bold">
+                        <strong>Kontakt</strong>
+                    </h6>
+                    <hr class="deep-orange accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
+                    <p>
+                        <a th:href="@{/kontakt}" href="/kontakt">Kontakt</a>
+                    </p>
             </div>
             <!--/.Fourth column-->
 
@@ -69,7 +67,8 @@
     <!--/.Footer Links-->
 
     <!-- Copyright -->
-    <div class="footer-copyright text-center py-3">© <span th:text="${#temporals.year(#temporals.createNow())}">2024</span> Copyright:
+    <div class="footer-copyright text-center py-3">© <span
+            th:text="${#temporals.year(#temporals.createNow())}">2024</span> Copyright:
         <a href="https://javastart.pl"> JavaStart.pl</a>
     </div>
 
