Możliwość usuwania opisu szkolenia

--- a/src/main/resources/templates/admin/descriptions.html
+++ b/src/main/resources/templates/admin/descriptions.html
@@ -22,6 +22,7 @@
             <th>Nazwa szkolenia</th>
             <th>Zobacz</th>
             <th>Edytuj</th>
+            <th>Usuń</th>
         </tr>
         </thead>
         <tbody>
@@ -33,11 +34,14 @@
             <td>
                 <a th:href="'/admin/opisy/' + ${description.id} + '/edytuj'">Edytuj</a>
             </td>
+            <td>
+                <a th:href="'/admin/opisy/' + ${description.id} + '/usun'">Usuń</a>
+            </td>
         </tr>
 
         </tbody>
     </table>
-
+    <p th:if="${notEmptyTrainingList}" style="color: red;">Nie można usunąć opisu aktualnie używanego przez szkolenie.</p>
 </div>
 
 </body>
