--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -14,12 +14,23 @@
         <tr>
             <th>Imię i nazwisko</th>
             <th>Email</th>
+            <th scope="col">Aktualna rola</th>
+            <th>ADMIN</th>
         </tr>
         </thead>
         <tbody>
         <tr th:each="user: ${users}" class="clickable-row" th:data-href="'/admin/uzytkownicy/' + ${user.id}">
             <td th:text="${user.firstName} + ' ' + ${user.lastName}"></td>
             <td th:text="${user.email}"></td>
+            <td th:text="${user.roles}"></td>
+            <td>
+                <form th:action="@{|/admin/uzytkownicy/${user.id}/awansuj|}" method="post">
+                    <button type="submit">AWANSUJ</button>
+                </form>
+                <form th:action="@{|/admin/uzytkownicy/${user.id}/degraduj|}" method="post">
+                    <button type="submit">DEGRADUJ</button>
+                </form>
+            </td>
         </tr>
 
         </tbody>
