--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -56,11 +56,8 @@
                 </h6>
                 <hr class="deep-orange accent-2 mb-4 mt-0 d-inline-block mx-auto" style="width: 60px;">
                 <p>
-                    <i class="fa fa-home mr-3"></i> Wrocław</p>
-                <p>
-                    <i class="fa fa-envelope mr-3"></i> bootcamp@javastart.pl</p>
-                <p>
-                    <i class="fa fa-phone mr-3"></i> 788 023 248 (pon-pt 8:00-16:00)</p>
+                    <a th:href="@{/kontakt}" href="/kontakt">Kontakt</a>
+                </p>
             </div>
             <!--/.Fourth column-->
 
