--- a/src/main/resources/templates/admin/users.html
+++ b/src/main/resources/templates/admin/users.html
@@ -24,12 +24,16 @@
             <td th:text="${user.email}"></td>
             <td th:text="${user.roles}"></td>
             <td>
-                <form th:action="@{|/admin/uzytkownicy/${user.id}/awansuj|}" method="post">
-                    <button type="submit">AWANSUJ</button>
-                </form>
-                <form th:action="@{|/admin/uzytkownicy/${user.id}/degraduj|}" method="post">
-                    <button type="submit">DEGRADUJ</button>
-                </form>
+                <div th:unless="${user.roles.contains('ROLE_ADMIN')}">
+                    <form th:action="@{|/admin/uzytkownicy/${user.id}/awansuj|}" method="post">
+                        <button class="btn btn-primary btn-md mb-3 waves-effect waves-light" type="submit">AWANSUJ</button>
+                    </form>
+                </div>
+                <div th:if="${user.roles.contains('ROLE_ADMIN')}">
+                    <form th:action="@{|/admin/uzytkownicy/${user.id}/degraduj|}" method="post">
+                        <button class="btn btn-primary btn-md mb-3 waves-effect waves-light" type="submit">DEGRADUJ</button>
+                    </form>
+                </div>
             </td>
         </tr>
 
